# BuildTestRun

./: .btr.toml  CLAUDE.md  COMMAND_FEATURES.md  COMPLETIONS.md  Cargo.toml  EXAMPLES.md  FEATURE_OPPORTUNITIES.md  FLAG_PASSTHROUGH.md  FUTURE_FEATURES.md  INIT_ENHANCEMENTS.md  LICENSE  NEW_ROADMAP.md  NEXT_FEATURES.md  NEXT_FEATURE_IDEAS.md  OPEN_TASKS.md  README.md  REVIEW.md  ROADMAP.md  SPEC.md  TEMPLATE_CATALOG.txt  USABILITY_FEATURE_IDEAS.md  install.sh
.github/workflows/: ci.yml
src/: cli.rs  completions.rs  config.rs  constants.rs  discovery.rs  error.rs  lib.rs  main.rs  runner.rs
tests/: cli.rs
